--- a/src/main/webapp/resources/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/resources/bootstrap/css/bootstrap.css
@@ -5638,7 +5638,7 @@ a.thumbnail:focus {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   white-space: nowrap;
-  vertical-align: baseline;
+  vertical-align: middle;
   background-color: #999999;
 }
 
